--- a/postgres-deploy.yaml
+++ b/postgres-deploy.yaml
@@ -1,4 +1,4 @@
-piVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deploy
@@ -17,14 +17,14 @@ spec:
       labels:
         name: postgres-pod
         app: demo-voting-app
-  spec:
-    containers:
-      - name: postgres
-        image: postgres
-        ports:
-          - containerPort: 5432
-        env:
-          - name: POSTGRES_USER
-            value: "postgres"
-          - name: POSTGRES_PASSWORD
-            value: "postgres"
+    spec:
+      containers:
+        - name: postgres
+          image: postgres
+          ports:
+            - containerPort: 5432
+          env:
+            - name: POSTGRES_USER
+              value: "postgres"
+            - name: POSTGRES_PASSWORD
+              value: "postgres"
